--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation "com.android.support:palette-v7:$androidSupportVersion"
     implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
+
+    implementation "com.jakewharton.timber:timber:$timberVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
+
     implementation files('libs/volley.jar')
 }
