--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -26,5 +26,12 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timberVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
 
+    implementation ("com.github.bumptech.glide:glide:$glideVersion") {
+        exclude group: "com.android.support"
+    }
+
+
+
+
     implementation files('libs/volley.jar')
 }
