--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timberVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
 
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 
 
