--- a/XYZReader/src/main/AndroidManifest.xml
+++ b/XYZReader/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name=".ui.ArticleDetailActivity"
             android:parentActivityName=".ui.ArticleListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
